# CLF-CBF-Safe-Navigation-in-Dynamic-Environments

dynamic_obstacles/: CMakeLists.txt  package.xml
dynamic_obstacles/launch/: gazebo_mov_obs.launch
dynamic_obstacles/models/actor_collision_model/: model.config  model.sdf
dynamic_obstacles/models/moving_cylinder/: model.config  model.sdf
dynamic_obstacles/models/walking_human/: model.config  model.sdf
dynamic_obstacles/scripts/: actor_collision_model.py  move_cylinder.py
dynamic_obstacles/worlds/: cafe.world
dynamic_obstacles/worlds/mov_obs/: cafe.world  turtlebot3_house.world
erl_clf_cbf_controller/: CMakeLists.txt  package.xml
erl_clf_cbf_controller/launch/: clf_cbf_qp_mov_obs.launch  clf_cbf_qp_static_world.launch
erl_clf_cbf_controller/rviz/: clf_cbf_config.rviz
erl_clf_cbf_controller/src/erl_clf_cbf_controller/: clf_cbf_controller.py  clf_cbf_controller_node.py  clf_only_controller.py  controller_config.json  cvxpy_solver_node.py  post_process.py
ref_gvn_lite/src/ref_gvn_lite/: core_lite.py
