<?xml version="1.0"?>
<package format="2">

  <name>dynamic_obstacles</name>
  <version>0.0.1</version>

  <description>
    Dynamic obstacle models and controllers for Gazebo.
  </description>

  <maintainer email="your_email@example.com">
    Your Name
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>