<?xml version="1.0"?>
<package format="2">
  <name>erl_clf_cbf_controller</name>
  <version>0.0.0</version>
  <description>The base-line CLF-CBF-QP controller package for the kinematic model of Lenna Mobile Robot.</description>

  <maintainer email="yiyi@ucsd.edu">hw</maintainer>
  <license>BSD</license>

  <depend>rospy</depend>
  <depend>ros_numpy</depend>
  <depend>ref_gvn_lite</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
